Fix tree long value overflow

--- a/web/common/css/body.css
+++ b/web/common/css/body.css
@@ -1,3 +1,31 @@
+.step {
+    display: inline-block;
+    max-width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.description {
+    font-style: italic;
+    font-size: small;
+    text-align: right;
+    margin-left: 10px;
+}
+
+.completed {
+    text-decoration: line-through;
+}
+
+.delete {
+    float: right;
+    margin: 6px;
+}
+
+.created {
+    font-size: small;
+    text-align: right;
+}
+
 .selected .webix_tree_item.webix_selected {
     background: #fff3a1;
 }
@@ -10,22 +38,7 @@
     background-color: transparent;
 }
 
-.delete {
-    float: right;
-    padding: 6px;
-}
-
-.description {
-    font-style: italic;
-    font-size: small;
-    text-align: right;
-}
-
-.completed {
-    text-decoration: line-through;
-}
-
-.created {
-    font-size: small;
-    text-align: right;
+.selected .webix_tree_item.webix_selected .description {
+    margin-left: 10px;
+    padding: 0;
 }
